--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Package for toastheme",
   "main": "gulpfile.js",
   "dependencies": {
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-imagemin": "^2.3.0",
+    "autoprefixer": "^5.2.0",
+    "csswring": "^4.0.0",
     "gulp": "^3.9.0",
+    "gulp-imagemin": "^2.3.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-postcss": "^6.0.0",
     "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.0"
+    "gulp-uglify": "^1.4.0",
+    "lost": "^6.5.0"
   },
   "devDependencies": {},
   "scripts": {
