--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "autoprefixer": "^5.2.0",
+    "breakpoint-sass": "^2.6.1",
     "csswring": "^4.0.0",
     "gulp": "^3.9.0",
     "gulp-imagemin": "^2.3.0",
@@ -12,6 +13,7 @@
     "gulp-postcss": "^6.0.0",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.0",
+    "isotope-layout": "^2.2.2",
     "lost": "^6.5.0"
   },
   "devDependencies": {},
